--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
         <p>ABY ODEBRAĆ SWOJĄ DARMOWĄ KSIĄŻKĘ, WYKONAJ KILKA PROSTYCH KROKÓW:</p>
         <ol>
             <li>KLIKNIJ W PONIŻSZY LINK:</li>
-            <a id="claimLink" href="https://example.com/odbierz-ksiazke">ODBIERZ DARMOWĄ KSIĄŻKĘ</a>
+            <a id="claimLink" href="https://zysk.com.pl/">ODBIERZ DARMOWĄ KSIĄŻKĘ</a>
             <li>WYBIERZ KSIĄŻKĘ Z NASZEJ STRONY.</li>
             <li>WYŚLIJ WYBRANĄ KSIĄŻKĘ NA PODANY PONIŻEJ ADRES EMAIL ORAZ KILKA ZDAŃ, DLACZEGO WYBRAŁEŚ TĘ KSIĄŻKĘ.</li>
         </ol>
         <p><strong>ADRES EMAIL:</strong></p>
-        <div class="email-highlight">twojemail@example.com</div>
+        <div class="email-highlight">janusz.wyborowy12@gmail.com</div>
 
         <p><span style="color: red; font-weight: bold;">DLACZEGO WARTO? NASZA OFERTA OBEJMUJE NAJNOWSZE BESTSELLERY ORAZ KLASYCZNE TYTUŁY, KTÓRE KAŻDY MIŁOŚNIK KSIĄŻEK MUSI MIEĆ W SWOJEJ KOLEKCJI. NIE PRZEGAP TEJ WYJĄTKOWEJ OKAZJI, ABY WZBOGACIĆ SWOJĄ BIBLIOTECZKĘ!</span></p>
         <p><strong>UWAGA:</strong> OFERTA JEST OGRANICZONA CZASOWO! PROSIMY O SKORZYSTANIE Z NIEJ DO KOŃCA TYGODNIA, ABY NIE STRACIĆ SWOJEJ SZANSY NA DARMOWĄ KSIĄŻKĘ.</p>
@@ -142,4 +142,3 @@
     </script>
 </body>
 </html>
-
